tests/fail/fail_compound_assign_uninitialized.kr
fn inisiu() {
    dipoz nter x;
    x += 1;
    mostran(x);
}
